Phani | 1204633988335095 | [Bug] Alignment and CSS issue introduced by Carbon (#279)
* Recurring Appointments

* Recurring Appointments

* Update locale

* Refactor Tags to use carbon components

* Update CSS styling for recurring appointments

* Update CSS to use inline-block

* Update CSS for Time Picker

* Update CSS for Time Picker for regular appointments

* Fix failing tests

* Disable autocomplete

* Modify the dropdown option

* Cleanup unused

* Cleanup unused

* Fix build

* Refactor labels for Recurring appointments

* Fix theme

* Add font family to label

* Fix font for Repeats on label

* Change Error Messages font to carbon style

--- a/ui/react-components/carbon-theme.scss
+++ b/ui/react-components/carbon-theme.scss
@@ -3,13 +3,32 @@ $interactive-02: #393939;
 $ui-05: #D0E2FF;
 $inverse-01: #0a74ff;
 $border-inverse: #0a74ff;
+$css--default-type: false;
+$css--reset: false;
+$css--body: false;
 @import "~carbon-components/scss/globals/scss/styles.scss";
-.bx--content-switcher-btn.bx--content-switcher--selected{
-  border: solid;
+[class*="bx--"]{
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 .bx--content-switcher-btn{
+  $radius: 4px;
+  border-radius: 0;
   color: #0a74ff;
   border-color: #A6C8FF;
+  &:first-child{
+    border-top-left-radius: $radius;
+    border-bottom-left-radius: $radius;
+  }
+  &:last-child{
+    border-top-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+  }
+  &.bx--content-switcher--selected{
+    border: solid;
+  }
+  &:after{
+    background-color: #edf5ff;
+  }
 }
 .bx--btn--primary:hover{
   background-color: #669999;
@@ -63,4 +82,9 @@ $border-inverse: #0a74ff;
 .bx--list--nested {
   margin-left: 0.75rem;
 }
-  
+.bx--list-box__wrapper{
+  max-width: 250px;
+}
+.bx--number__control-btn{
+  border: none;
+}
