--- a/ui/react-components/components/Conflicts/Conflicts.module.scss
+++ b/ui/react-components/components/Conflicts/Conflicts.module.scss
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    top: 110px;
+    top: 112px;
     min-width: 540px;
     z-index: 600;
     align-items: center;
